--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,15 @@
 language: node_js
 node_js:
-  - 9
-  - 8
+  - "stable"
+  - "9"
+  - "8"
+cache:
+  yarn: true
+  directories:
+    - "node_modules"
+script:
+  - npm run test
+
+notifications:
+  email:
+    on_success: never
